--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/thecarbongames/vistaserver#readme",
   "dependencies": {
+    "express": "^5.1.0",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
   }
